095_bst_map/grade.txt
Grading at 11/05/2018:16:51:42.268851
For commit ID b6524a0ae03235143cc0aafec013f835526a8f28
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = int]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<int, int>::Node* const*’ to ‘BstMap<int, int>::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<int, std::__cxx11::basic_string<char> >::Node* const*’ to ‘BstMap<int, std::__cxx11::basic_string<char> >::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = int; V = Tester]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<int, Tester>::Node* const*’ to ‘BstMap<int, Tester>::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<std::__cxx11::basic_string<char>, int>::Node* const*’ to ‘BstMap<std::__cxx11::basic_string<char>, int>::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node* const*’ to ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node* const*’ to ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = int]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<Tester, int>::Node* const*’ to ‘BstMap<Tester, int>::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node* const*’ to ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘const V& BstMap<K, V>::lookup(const K&) const [with K = Tester; V = Tester]’:
89-tester.cpp:119:26:   required from here
bstmap.h:59:13: error: invalid conversion from ‘BstMap<Tester, Tester>::Node* const*’ to ‘BstMap<Tester, Tester>::Node**’ [-fpermissive]
     Node ** curr = &root;
             ^~~~
The code did not compile.  This test failed.

Overall Grade: F
